--- a/experiments/hydra_cfg/dip/unet.yaml
+++ b/experiments/hydra_cfg/dip/unet.yaml
@@ -1,9 +1,9 @@
 net:
-  scales: 3
-  channels: [32, 32, 32]
-  skip_channels: [0, 4, 4]
+  scales: 4
+  channels: [128, 128, 128, 128]
+  skip_channels: [0, 0, 4, 4]
   use_norm: True
-  use_sigmoid: True
+  use_sigmoid: False
   sigmoid_saturation_thresh: 15
 optim:
   lr: 1e-4
