added hydra configs & random projc

--- a/experiments/hydra_cfg/config.yaml
+++ b/experiments/hydra_cfg/config.yaml
@@ -3,6 +3,7 @@ defaults:
   - adp_dataset: rectangles
   - trafo: simple_trafo
   - dip: unet
+  - subspace: subspace
 seed: 1
 num_images: 1
 load_dip_models_from_path: null
