fixes and changes in hydra congfs

--- a/experiments/hydra_cfg/config.yaml
+++ b/experiments/hydra_cfg/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - dataset: ellipses
-  - adp_dataset: rectangles
+  - adp_dataset: walnut_patches
   - trafo: simple_trafo
   - dip: unet
   - subspace: subspace
