--- a/experiments/hydra_cfg/subspace/subspace.yaml
+++ b/experiments/hydra_cfg/subspace/subspace.yaml
@@ -1,12 +1,13 @@
 low_rank_subspace_dim: 200
 num_random_projs: null
 training: 
-  num_epochs: 20
-  batch_size: 16
+  num_epochs: 15
+  batch_size: 32
+  save_best_learned_params_per_epoch: True
   optim:
     lr: 1e-3
     weight_decay: 1e-6
-    lr_min: 5e-5,
+    lr_min: 5e-5
     max_lr: 5e-3 
 sampling:
   num_samples: 500
