--- a/experiments/hydra_cfg/subspace/subspace.yaml
+++ b/experiments/hydra_cfg/subspace/subspace.yaml
@@ -1,16 +1,17 @@
 low_rank_subspace_dim: 200
 num_random_projs: null
 training: 
-  num_epochs: 15
+  num_epochs: 100
   batch_size: 32
   save_best_learned_params_per_epoch: True
   optim:
     lr: 1e-3
     weight_decay: 1e-6
+    scheduler_name: onecyclelr
     lr_min: 5e-5
-    max_lr: 5e-3 
+    max_lr: 5e-3
 sampling:
-  num_samples: 500
+  num_samples: 1000
   burn_in: 1000
 optim:
   lr: 1e-2
