initial commit refactoring: added Sampler, LinearSubspace and CartoonSet

--- a/experiments/hydra_cfg/config.yaml
+++ b/experiments/hydra_cfg/config.yaml
@@ -1,8 +1,9 @@
 defaults:
   - dataset: ellipses
   - trafo: simple_trafo
-  - dip: unet
-  - subspace: subspace
+  - dip: small_unet
+  - sampler: base_sampler
+  - subspace: base_subspace
 seed: 1
 num_images: 1
 load_dip_models_from_path: null
