--- a/experiments/hydra_cfg/sampler/base_sampler.yaml
+++ b/experiments/hydra_cfg/sampler/base_sampler.yaml
@@ -1,7 +1,5 @@
-low_rank_subspace_dim: 200
-num_random_projs: null
 training: 
-  num_epochs: 100
+  num_epochs: 5
   batch_size: 32
   save_best_learned_params_per_epoch: True
   optim:
@@ -11,8 +9,9 @@ training:
     lr_min: 5e-5
     max_lr: 5e-3
 sampling:
-  num_samples: 1000
-  burn_in: 1000
+  save_samples: True
+  num_samples: 10
+  burn_in: 5
 optim:
   lr: 1e-2
   weight_decay: 1e-6 
