--- a/experiments/hydra_cfg/sampler/base_sampler.yaml
+++ b/experiments/hydra_cfg/sampler/base_sampler.yaml
@@ -1,14 +1,14 @@
 training: 
-  num_epochs: 5
+  num_epochs: 100
   batch_size: 32
   save_best_learned_params_per_epoch: True
   optim:
     lr: 1e-3
-    weight_decay: 1e-6
-    scheduler_name: onecyclelr
-    lr_min: 5e-5
+    weight_decay: 5e-6
+    scheduler_name: cosine
+    lr_min: 5e-4
     max_lr: 5e-3
 sampling:
   save_samples: True
-  num_samples: 10
-  burn_in: 5
+  num_samples: 1000
+  burn_in: 100
