changed regular unet infos

--- a/experiments/hydra_cfg/dip/small_unet.yaml
+++ b/experiments/hydra_cfg/dip/small_unet.yaml
@@ -1,7 +1,7 @@
 net:
-  scales: 3
-  channels: [32, 32, 32]
-  skip_channels: [0, 0, 4]
+  scales: 4
+  channels: [64, 64, 64, 64]
+  skip_channels: [0, 0, 4, 4]
   use_norm: True
   use_sigmoid: False
   sigmoid_saturation_thresh: 15
