--- a/experiments/hydra_cfg/subspace/base_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/base_subspace.yaml
@@ -1,4 +1,7 @@
 subspace_dim: 400
+use_subsampling_orthospace: False
+subsampling_orthospace:
+  subsampling_orthospace_dim: 40
 num_random_projs: null
 use_random_init: True
 ortho_basis_path: ./
