rb876 working state (bad practice)

--- a/experiments/hydra_cfg/config.yaml
+++ b/experiments/hydra_cfg/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - source_dataset: ellipses
-  - test_dataset: rectangles
+  - test_dataset: cartoonset
   - trafo: simple_trafo
   - dip: small_unet
   - sampler: base_sampler
