rb876: modified quadratic model optim criterion

--- a/experiments/hydra_cfg/subspace/ngd_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/ngd_subspace.yaml
@@ -4,12 +4,13 @@ defaults:
 fine_tuning:
   optim:
     optimizer: ngd
-    lr: 5
+    lr: 1
     momentum: 0.9
     use_adaptive_damping: True
     use_adaptive_learning_rate: True
     use_adaptive_momentum: True
-    quad_model_adaptation_thresh: 5e-6
+    switch_quad_model_adaptation_interval: 20
+    scale_ball: 0.1
     use_approximate_quad_model: False
 fisher_info:
   batch_size: 1
@@ -17,11 +18,11 @@ fisher_info:
   curvature_ema: 0.9
   init_damping: 100
   mode: vjp_rank_one
-  use_init_fisher_info_matrix: True
+  use_init_fisher_info_matrix: False
   init_fisher_info_matrix:
     epochs: 1
     batch_size: 1
-    num_random_vecs: 1
+    num_random_vecs: 10
     optim:
       lr: 1e-3
       weight_decay: 0
