--- a/experiments/hydra_cfg/subspace/exact_ngd_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/exact_ngd_subspace.yaml
@@ -5,19 +5,21 @@ fine_tuning:
   optim:
     optimizer: ngd
     lr: 1
-    momentum: 0.
+    momentum: 0.9
     use_adaptive_damping: False
     use_adaptive_learning_rate: False
     use_adaptive_momentum: False
-    quad_model_adaptation_thresh: 5e-6
+    switch_quad_model_adaptation_interval: 20
+    scale_ball: 0.09
     use_approximate_quad_model: False
 fisher_info:
   batch_size: 1
   num_random_vecs: 100
   curvature_ema: 0.
-  init_damping: 1e-3
+  weight_decay: 0
+  init_damping: 1e-4
   mode: full
-  use_init_fisher_info_matrix: True
+  use_init_fisher_info_matrix: False
   init_fisher_info_matrix:
     epochs: 1
     batch_size: 1
