--- a/experiments/hydra_cfg/subspace/exact_ngd_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/exact_ngd_subspace.yaml
@@ -10,7 +10,7 @@ fine_tuning:
     use_adaptive_learning_rate: False
     use_adaptive_momentum: False
     stats_interval: 20
-    scale_ball: 0.09
+    scale_curvature: 0.1
     use_approximate_quad_model: False
 fisher_info:
   batch_size: 1
