--- a/experiments/hydra_cfg/subspace/ngd_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/ngd_subspace.yaml
@@ -2,6 +2,7 @@ defaults:
   - base_subspace
 
 fine_tuning:
+  iterations: 5000
   optim:
     optimizer: ngd
     lr: 1
@@ -10,12 +11,12 @@ fine_tuning:
     use_adaptive_learning_rate: True
     use_adaptive_momentum: True
     stats_interval: 20
-    scale_curvature: 0.001
+    scale_curvature: 1e-3
     use_approximate_quad_model: False
 fisher_info:
   batch_size: 1
-  num_random_vecs: 10
-  curvature_ema: 0.9
+  num_random_vecs: 100
+  curvature_ema: 0.85
   init_damping: 100
   mode: vjp_rank_one
   return_stats: True
@@ -23,7 +24,7 @@ fisher_info:
   init_fisher_info_matrix:
     epochs: 1
     batch_size: 1
-    num_random_vecs: 10
+    num_random_vecs: 100
     optim:
       lr: 1e-3
       weight_decay: 0
