--- a/experiments/hydra_cfg/subspace/exact_ngd_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/exact_ngd_subspace.yaml
@@ -10,7 +10,7 @@ fine_tuning:
     use_adaptive_learning_rate: False
     use_adaptive_momentum: False
     stats_interval: 20
-    scale_curvature: 0.1
+    scale_curvature: 1
     use_approximate_quad_model: False
 fisher_info:
   batch_size: 1
@@ -19,6 +19,7 @@ fisher_info:
   weight_decay: 0
   init_damping: 1e-4
   mode: full
+  sampling_probes_mode: row_norm
   return_stats: False
   use_init_fisher_info_matrix: False
   init_fisher_info_matrix:
