rb876: removed init fisher and added lbfgs as optim

--- a/experiments/hydra_cfg/subspace/ngd_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/ngd_subspace.yaml
@@ -2,7 +2,7 @@ defaults:
   - base_subspace
 
 fine_tuning:
-  iterations: 5000
+  iterations: 1000
   optim:
     optimizer: ngd
     lr: 1
@@ -16,24 +16,15 @@ fine_tuning:
 fisher_info:
   batch_size: 1
   num_random_vecs: 100
+  static_curvature_ema: 0.85
   update_curvature_ema: True
-  curvature_ema: 0.85
   curvature_ema_kwargs:
     max_iterations: 2000
     base_curvature_ema: 0.5
     power: 0.75
-    max_ema: 0.99
+    max_ema: 0.95
     increase: True
   init_damping: 100
   mode: vjp_rank_one
   sampling_probes_mode: row_norm
   return_stats: True
-  use_init_fisher_info_matrix: False
-  init_fisher_info_matrix:
-    epochs: 1
-    batch_size: 1
-    num_random_vecs: 100
-    optim:
-      lr: 1e-3
-      weight_decay: 0
-      gamma: 1e-4
