--- a/experiments/hydra_cfg/subspace/base_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/base_subspace.yaml
@@ -4,6 +4,7 @@ subsampling_orthospace:
   subsampling_orthospace_dim: 40
 num_random_projs: null
 use_random_init: True
+use_approx: False
 ortho_basis_path: ./
 fine_tuning:
   iterations: 10000
