added option to remove forward op from functorch

--- a/experiments/hydra_cfg/subspace/base_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/base_subspace.yaml
@@ -5,6 +5,7 @@ subsampling_orthospace:
 num_random_projs: null
 use_random_init: True
 use_approx: False
+forward_op_as_part_of_model: True
 ortho_basis_path: ./
 fine_tuning:
   iterations: 10000
