--- a/experiments/hydra_cfg/subspace/base_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/base_subspace.yaml
@@ -2,6 +2,7 @@ subspace_dim: 900
 use_subsampling_orthospace: False
 subsampling_orthospace:
   subsampling_orthospace_dim: 40
+params_space_retain_ftc: null 
 num_random_projs: null
 use_random_init: True
 use_approx: False
