--- a/experiments/hydra_cfg/dip/regular_unet.yaml
+++ b/experiments/hydra_cfg/dip/regular_unet.yaml
@@ -11,6 +11,9 @@ optim:
   loss_function: mse
   gamma: 6.5e-6
   optimizer: adam
+  use_early_stop: False
+  buffer_size: 100
+  patience: 1000
 show_pbar: True
 torch_manual_seed: 10
 log_path: ./
