--- a/experiments/hydra_cfg/dip/regular_unet.yaml
+++ b/experiments/hydra_cfg/dip/regular_unet.yaml
@@ -5,6 +5,7 @@ net:
   use_norm: True
   use_sigmoid: False
   sigmoid_saturation_thresh: 15
+  num_image_channels: 1
 optim:
   lr: 1e-4
   iterations: 10000
