--- a/experiments/hydra_cfg/dip/regular_unet.yaml
+++ b/experiments/hydra_cfg/dip/regular_unet.yaml
@@ -3,6 +3,7 @@ net:
   channels: [128, 128, 128, 128, 128, 128]
   skip_channels: [0, 0, 0, 0, 4, 4]
   use_norm: True
+  norm_type: group
   use_sigmoid: False
   sigmoid_saturation_thresh: 15
   num_image_channels: 1
