--- a/experiments/hydra_cfg/sampler/base_sampler.yaml
+++ b/experiments/hydra_cfg/sampler/base_sampler.yaml
@@ -9,6 +9,7 @@ training:
     lr_min: 5e-4
     max_lr: 5e-3
 sampling:
+  use_incremental_sampling: False
   save_samples: True
   num_samples: 1000
   burn_in: 100
