--- a/experiments/hydra_cfg/source_dataset/ellipses.yaml
+++ b/experiments/hydra_cfg/source_dataset/ellipses.yaml
@@ -1,6 +1,8 @@
 name: ellipses
 im_size: 128
 max_n_ellipse: 70
+use_mask_disk: False 
+radius: null   
 length: 
   train: 32000
   validation: 3200
