added random and minor fixes

--- a/experiments/hydra_cfg/subspace/base_subspace.yaml
+++ b/experiments/hydra_cfg/subspace/base_subspace.yaml
@@ -6,6 +6,7 @@ params_space_retain_ftc: null
 num_random_projs: null
 use_random_init: True
 use_approx: False
+use_random_basis: False
 forward_op_as_part_of_model: True
 ortho_basis_path: ./
 fine_tuning:
