--- a/experiments/hydra_cfg/sampler/base_sampler.yaml
+++ b/experiments/hydra_cfg/sampler/base_sampler.yaml
@@ -11,6 +11,7 @@ training:
 sampling:
   use_incremental_sampling: False
   save_samples: True
+  save_samples_every_n_epoch: False
   num_samples: 1000
   burn_in: 100
   sampling_strategy: linear
